Fix IE svg stretching

--- a/css/main.less
+++ b/css/main.less
@@ -339,7 +339,6 @@ article {
       margin-bottom: 5px;
       vertical-align: top;
 
-
       img, input[type=image] {
         max-width: 100%;
         max-height: 100%;
@@ -348,6 +347,11 @@ article {
       &.paypal {
         background-color: white;
         padding: 7px;
+
+        input[type=image] {
+          width: auto;
+          height: 100%;
+        }
       }
     }
   }
